# money-tracker

./: .gitignore  AGENTS.md  CLAUDE.md  Caddyfile.example  DOLT_REMOTE.md  README.md  app.py  ltdt9lt6mrlkqul4pibltovclbrjhd1o  manifest  pyproject.toml
.beads/: .gitignore  config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.claude/: settings.json
.claude/commands/: fix-beads.md
.githooks/: pre-push
.streamlit/: config.toml  secrets.toml.example
backend/: deps.py  launch.py  main.py  schemas.py
backend/routers/: __init__.py  accounts.py  alerts.py  budget.py  categories.py  imports.py  insights.py  rules.py  settings.py  transactions.py
docs/: access-control.md  self-hosting.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: data-flow.spec.ts  happy-path.spec.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AppShell.test.tsx  AppShell.tsx  MobileNav.test.tsx  MobileNav.tsx
frontend/src/lib/: api.test.ts  api.ts  money.test.ts  money.ts  queries.optimistic.test.ts  queries.ts  types.ts
pages/: 0_Budget.py  1_Dashboard.py  1_Import.py  2_Transactions.py  3_Alerts.py  3_Categories.py  4_Dashboard.py  4_Recurring.py  5_Settings.py  5_Spending_Analysis.py  7_Settings.py
scripts/: beads-onboard.sh
src/: __init__.py
src/alerts/: __init__.py  base.py  budget_overspending.py  recurring_changes.py  unusual_spending.py
src/api/: __init__.py  models.py  ynab_client.py
src/budget/: engine.py  targets.py
src/cache/: __init__.py  database.py  sync.py
src/imports/: classifier.py  ofx.py  service.py
src/utils/: config.py  formatters.py
tests/: test_api.py  test_auto_assign.py  test_budget_router.py  test_categories_router.py  test_classifier.py  test_credit_cards.py  test_database_migration.py  test_db_concurrency.py  test_foundation.py  test_imports_ai_categorize.py  test_imports_router.py  test_launch.py  test_misc_routers.py  test_rules_router.py  test_schemas.py  test_spa.py  test_targets.py  test_transactions_router.py
(+45 files in other folders)
