[project]
name = "bud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
bud = "backend.launch:main"

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["backend", "src"]
