[project]
name = "bud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "numpy>=2.2.6",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
# AI auto-classification fallback on import (bead bud-pco). Optional: the
# classifier imports `anthropic` lazily and no-ops without it, so the core app
# never hard-depends on the SDK. Install with `uv sync --extra ai`.
ai = [
    "anthropic>=0.45",
]

[project.scripts]
bud = "backend.launch:main"

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["backend", "src"]
